--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Start SUT
         run: java -jar ./artifacts/app-card-delivery.jar &
       - name: Build with Gradle
-        run: ./gradlew clean test -Dselenide.headless=true --info
+        run: ./gradlew clean test --info -Dselenide.headless=true
